fix a spacing thing that was annoying me

--- a/homework1/style.css
+++ b/homework1/style.css
@@ -46,7 +46,7 @@ div.main {
     max-width: 50%;
     height: 80%;
     border: 3px solid navy;
-    padding: 10px 20px;
+    padding: 10px 20px 20px;
     margin: auto;
 }
 
